--- a/templates/leads/lead_show.html
+++ b/templates/leads/lead_show.html
@@ -241,13 +241,13 @@
                                         <%= lead.lastname %>
                                       </span>
                                      </li>
-                                     <form ng-show="showEdit" class="form-inline newLeadForm" role="form" style="  margin-right: 2px;display: inline-block;float: left;margin-bottom: 0px;width: 49%;">
+                                     <form ng-show="showEdit" class="form-inline newLeadForm" role="form" style="  margin-right: 2px;display: inline-block;float: left;margin-bottom: 0px;width: 48%;">
                                               <div class="input-icon">
                                                    <input class="  form-control address-input" type="text" placeholder="First name" style="padding-top: 0px;padding-bottom: 0px;height: 20px;border: none;padding-left: 0px !important; padding-right: 0px;text-align: right;" ng-model="lead.firstname" ng-blur="inlinePatch('Lead','', 'firstname',lead.entityKey,lead.firstname)" ng-enter="inlinePatch('Lead','', 'firstname',lead.entityKey,lead.firstname)">
                                               </div>
 
                                       </form>
-                                      <form ng-show="showEdit" class="form-inline newLeadForm" role="form" style="  margin-right: 2px;display: inline-block;float: left;margin-bottom: 0px;width: 49%;">
+                                      <form ng-show="showEdit" class="form-inline newLeadForm" role="form" style="  margin-right: 2px;display: inline-block;float: left;margin-bottom: 0px;width: 48%;">
                                               <div class="input-icon">
                                                    <input class="  form-control address-input" type="text" placeholder="Last name" style="padding-top: 0px;padding-bottom: 0px;height: 20px;border: none;padding-left: 0px !important;text-align: left;padding-right: 0px;" ng-model="lead.lastname" ng-blur="inlinePatch('Lead','', 'lastname',lead.entityKey,lead.lastname)" ng-enter="inlinePatch('Lead','', 'lastname',lead.entityKey,lead.lastname)">
                                               </div>
@@ -378,10 +378,10 @@
                                               </div>
                                          </form>                                           
                                          <form ng-show="showEdit|| isEmptyArray(infonodes.websites)" class="form-inline newLeadForm" role="form" style="display: inline-block;float: left;margin-bottom: 0px;">
-                                                      <div class="input-icon">
-                                                          <i class="fa fa-globe" style="margin-top: 5px;margin-bottom: 0px;border: none;color: rgb(33, 151, 241);margin-left: 0px;"></i>
-                                                          <input ng-blur="addWebsite(website)" ng-enter="addWebsite(website)" ng-model="website.url" class="form-control ng-pristine ng-valid" id="exampleInputEmail2" placeholder="Add a Website" style="padding-top: 0px;padding-bottom: 0px;height: 20px;border: none;padding-left: 21px !important;">
-                                                      </div>
+                                                <div class="input-icon">
+                                                    <i class="fa fa-globe" style="margin-top: 5px;margin-bottom: 0px;border: none;color: rgb(33, 151, 241);margin-left: 0px;"></i>
+                                                    <input ng-blur="addWebsite(website)" ng-enter="addWebsite(website)" ng-model="website.url" class="form-control ng-pristine ng-valid" id="exampleInputEmail2" placeholder="Add a Website" style="padding-top: 0px;padding-bottom: 0px;height: 20px;border: none;padding-left: 21px !important;">
+                                                </div>
                                           </form>
                                           <div class="clearfix"></div>
                                       </ul> 
@@ -433,7 +433,7 @@
                                           <div class="cont">
                                             <a onclick="window.open('<%=prepareUrl(sociallink.url)%>','winname','width=700,height=550')" style="display: inline-block;   float: left;"><img width="24" src="/static/img/social_icons/<%=urlSource(sociallink.url)%>.png"></a>
                                             <input ng-show="showEdit" ng-blur="inlinePatch('Infonode','sociallinks', 'url',sociallink.entityKey,sociallink.url)" ng-enter="inlinePatch('Infonode','sociallinks', 'url',sociallink.entityKey,sociallink.url)" ng-model="sociallink.url"  id="exampleInputEmail2" placeholder="Add a Website" style="padding-top: 0px;padding-bottom: 0px;height: 24px;border: none;padding-left: 21px !important;display: inline-block;float: left;width: calc(100% - 38px);" class="form-control">                                            
-                                            <button  ng-show="showEdit" type="button" class="close" data-dismiss="modal" aria-hidden="true" style="top: 14px;display: inline-block;float: left;margin-top: 7px;" ng-click="deleteInfonode('<%=sociallink.entityKey%>','sociallinks')"></button>
+                                            <button  ng-show="showEdit" type="button" class="close" data-dismiss="modal" aria-hidden="true" style="top: 14px;display: inline-block;float: left;margin-top: 7px;" ng-click="deleteSocialLink(sociallink,'sociallinks')"></button>
                                             <div class="clearfix"></div>
                                           </div>
                                         </li>                                      
@@ -550,7 +550,9 @@
                                             <img  src="/static/img/linkedinLoader.gif" style="width:100%;height: 6px;">  
                                           </div>
                                           
-                                          <h3 style="margin-top:0px"> <i  class="fa fa-linkedin-square" style=" font-size: 20px; vertical-align: baseline;color: rgb(25, 133, 188) !important;"></i>{{_(' Linkedin Informations')}}</h3>
+                                          <h3 style="margin-top:0px"> <i  class="fa fa-linkedin-square" style=" font-size: 20px; vertical-align: baseline;color: rgb(25, 133, 188) !important;"></i>{{_(' Linkedin Informations')}} 
+                                           <span ng-hide="isEmpty(linkedProfile)" class="pull-right" ng-click="deleteSocialLink(linkedProfile,'sociallinks')"> <i class="fa fa-trash-o" style="font-size:15px;color: rgb(171, 171, 171);"></i></span>
+                                          </h3>
                                                 <div ng-show="listPeople.length > 0 && isEmpty(linkedProfile)&&isEmpty(linkedShortProfile)">                                       
                                                   <div class="news-block-tags" ng-show="linkedProfile.experiences['current-position']" style="margin-bottom:10px;">
                                                         <strong style="font-size: 14px;color: gray;"><i class="fa fa-male"></i> {{_('We found diffrent possible matches. Click the one you want :')}}</strong>
