adding clear informations on lead new
Former-commit-id: 81a3a45d2f0a86328cb7c331923a47be15b9c143 [formerly 11ff7e90d24b7bcc7c292197a036b58113ed1733] [formerly a94d4c4b46117bc63302a99c250117300c226db5 [formerly 070975fee2910f1199eec79fa135b8694de70ddc]]
Former-commit-id: f18eb603bd66927a98e8ef59037f05a6d86e5d34 [formerly 080e878575e582e6c5330cbf11815bf5abfe91fc]
Former-commit-id: 1c453960fc307e9a20c04f23b27157fbb142008d

--- a/templates/leads/lead_new.html
+++ b/templates/leads/lead_new.html
@@ -51,8 +51,9 @@
   <div class="col-md-9">
       <div class="row">
           <div class="showPage col-md-12 newActionsBtn">
-          <span>{{ _('Create Lead')}} </span>
+          <span>{{ _('Create Lead')}} </span>          
           <button class="btn red newAccountBtn pull-right" ng-click="save(lead)">{{ _('Create')}}</button>
+          <button class="btn btn-default newAccountBtn pull-right" ng-click="clearLead()" style="margin-right:5px">{{ _('Clear')}}</button>
           <div class="clearfix"></div>
         </div>
     <div class="showPage slimForm col-md-12 margin-bottom-15">
@@ -322,9 +323,10 @@
                        <div class="portlet showPage rightCardContent" ng-show="listPeople.length > 0">
                         <div class="portlet-title line">
                           <div class="caption"><i class="fa fa-linkedin" style='color:#169ef4'></i>                           
-                            {{_('Do you mean...')}}                            
+                            {{_('Do you mean...')}}    
+                                                   
                           </div>
-
+                          <span ng-hide="isEmpty(linkedProfile)" class="pull-right" ng-click="clearLinkedin()"> <i class="fa fa-trash-o" style="font-size:15px;color: rgb(171, 171, 171);"></i></span> 
                         </div>
                         <div class="portlet-body" id="chats">
                            
