--- a/templates/cases/case_list.html
+++ b/templates/cases/case_list.html
@@ -959,8 +959,8 @@
                     <div ng-hide="selectedPermisssions">
 
                         <label style="font-size:17px !important">{{ _("You can't share")}} 
-                            <span ng-show="selectedCards.length == 1">{{ _("this lead")}}</span>
-                            <span ng-show="selectedCards.length > 1">{{ _("these leads")}}</span>
+                            <span ng-show="selectedCards.length == 1">{{ _("this case")}}</span>
+                            <span ng-show="selectedCards.length > 1">{{ _("these cases")}}</span>
                           {{ _("you are not the owner")}} </label> <br>
                         <label ng-show="selectedPermisssions">{{ _("The owner is:")}}</label>
                     </div>
