--- a/templates/contacts/contact_list.html
+++ b/templates/contacts/contact_list.html
@@ -1035,8 +1035,8 @@
                     <div ng-hide="selectedPermisssions">
 
                         <label style="font-size:17px !important">{{ _("You can't share")}} 
-                            <span ng-show="selectedCards.length == 1">{{ _("this lead")}}</span>
-                            <span ng-show="selectedCards.length > 1">{{ _("these leads")}}</span>
+                            <span ng-show="selectedCards.length == 1">{{ _("this contact")}}</span>
+                            <span ng-show="selectedCards.length > 1">{{ _("these contacts")}}</span>
                           {{ _("you are not the owner")}} </label> <br>
                         <label ng-show="selectedPermisssions">{{ _("The owner is:")}}</label>
                     </div>
