--- a/templates/opportunities/opportunity_list.html
+++ b/templates/opportunities/opportunity_list.html
@@ -1046,8 +1046,8 @@
                     <div ng-hide="selectedPermisssions">
 
                         <label style="font-size:17px !important">{{ _("You can't share")}} 
-                            <span ng-show="selectedCards.length == 1">{{ _("this lead")}}</span>
-                            <span ng-show="selectedCards.length > 1">{{ _("these leads")}}</span>
+                            <span ng-show="selectedCards.length == 1">{{ _("this opportunity")}}</span>
+                            <span ng-show="selectedCards.length > 1">{{ _("these opportunities")}}</span>
                           {{ _("you are not the owner")}} </label> <br>
                         <label ng-show="selectedPermisssions">{{ _("The owner is:")}}</label>
                     </div>
