add wiki folder
Former-commit-id: 2578f874d6662539929c122e1ffa64acedc166cc [formerly 1780fd426be5c88b03450d06990582ede790dcff] [formerly a49f6899b91ccf2e2ad8fb863d80d69779491c59 [formerly 796c2f97f6b2d0de855ee9cff367694c01a3c68e]]
Former-commit-id: a56be61f0f5907fa06d990830318ec1947e02bc3 [formerly 1f5607656cf92f515b04890c2545e770009f127c]
Former-commit-id: 0098c556b31ba830f9f564ec858cfef7eb8d97e1

--- a/templates/new_web_site/partners.html
+++ b/templates/new_web_site/partners.html
@@ -42,7 +42,10 @@
       <div class="section-photo-fullscreen section-photo js-parallax-image js-responsive-image loaded" data-breakpoints="320,768,1024,1200,1600" data-known-dimensions="false" data-origin="0" data-preserve-aspect-ratio="false" data-reverse-parallax="true" data-src="http://www.lirent.net/wp-content/uploads/2014/10/Google-Now-Wallpaper-1-800x450.png" style="height: 882px; background-image: url(http://www.lirent.net/wp-content/uploads/2014/10/Google-Now-Wallpaper-1-800x450.png);"></div>
       <div class="section-centered section-vertical-align js-vertical-align js-parallax-image" data-origin="0" data-parallax-fade="true" data-parallax-speed="3" data-reverse-parallax="true" style="margin-top: -165px; opacity: 1;">
         <div class="one-whole">
-          <img alt="Drive logo logo-heading" title="ioGrow" src="http://storage.googleapis.com/iogrow-gs/Logo-iogrow.png" height="125">
+          
+            <a href="http://iogrow.com"  > <img alt="Drive logo logo-heading" title="ioGrow" src="http://storage.googleapis.com/iogrow-gs/Logo-iogrow.png" height="125"> </a>
+
+        
           <h1 class="section-headline section-headline-large section-headline-white heading together ">
            Welcome to ioGrow Partner Program
           </h1>
