--- a/templates/admin/settings/settings.html
+++ b/templates/admin/settings/settings.html
@@ -74,6 +74,9 @@
                   </li>
                   <li class="ng-tab sm-menu" ng-class="{active: selectedTab ==5}">
                     <a ng-click="waterfall(); selectedTab =5;">{{ _('Email signature')}}</a>
+                  </li>    
+                  <li class="ng-tab sm-menu" ng-class="{active: selectedTab ==6}">
+                    <a ng-click="waterfall(); selectedTab =6;">{{ _('Language')}}</a>
                   </li>
 
 
@@ -231,7 +234,7 @@
 
 
                       </div>
-                             <div class="tab-pane active" id="tab_1_4" ng-show="selectedTab == 5" style="display: none;">
+<div class="tab-pane active" id="tab_1_4" ng-show="selectedTab == 5" style="display: none;">
                   <div class="row cards-container" style="
     background-color: white;
     margin-right: -2px !important; 
@@ -263,6 +266,38 @@
 
 
                       </div>
+  <div class="tab-pane active" id="tab_1_5" ng-show="selectedTab == 6" style="display: none;">
+    <div class="row cards-container" style="
+    background-color: white;
+    margin-right: -2px !important; 
+    margin-left: 0px !important;">
+      <div class="col-md-12" >
+        <div class="row">
+          <div class="modal-body">
+            <form id="editSetting" name="edittag" class="form-horizontal">
+              <div class="form-group">
+                <label  class=" col-md-3 control-label">{{_("Language")}} </label>
+                <div class="col-md-9">
+                  <select class="form-control" curr ng-model="user.language" >
+                    <option value="">{{user.language}}</option>
+                    <option value="en" >{{_('English')}} </option>
+                    <option value="ar">{{_('Arabic')}}</option>
+                    <option value="fr" >{{_('French')}}</option>
+                  </select>
+                </div>
+              </div>
+            </form>
+          </div>
+          <div class="modal-footer">
+            <button  type="submit"  ng-click="updatelanguage(user,{{user.key.id()}})" class="btn btn-primary addContactNow">{{_("Save")}} </button>
+          </div>
+        </div>
+      </div>
+    </div><!--/inner-cards-container-->
+  </div>
+<!-- end language tab -->
+  </div>
+</div>
 
 
 
