--- a/templates/base.html
+++ b/templates/base.html
@@ -201,10 +201,10 @@
                       {{_('Sign Out')}}
                     </a>
                   </li>
-                  <li >
+            <!--       <li >
                 <a href="#EditSetting"  class="btn-link addAnotherPhone" data-toggle="modal">{{_('My Setting')}} </a>
 
-                  </li>
+                  </li> -->
                   <!--li>
                     <a href="/#/billing/" class="btn-link addAnotherPhone" data-toggle="modal">{{_('Billing')}}</a>
                   </li-->
@@ -388,10 +388,10 @@
 
 
  
- //var ROOT = '/_ah/api';
+ var ROOT = '/_ah/api';
 
 
-var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
+// var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
 
 
 
