--- a/templates/leads/lead_new.html
+++ b/templates/leads/lead_new.html
@@ -78,7 +78,7 @@
                 <div class="row">
                   <div class="col-md-6">
                     <div class="form-group">
-                      <label class="control-label col-md-4">{{ _('First Name')}}</label>
+                      <label class="control-label col-md-4">{{ _('First Name*')}}</label>
                       <div class="col-md-8">
                         <input type="text" required id="id_firstname" class="form-control" ng-model="lead.firstname">
                       </div>
@@ -86,7 +86,7 @@
                   </div>
                   <div class="col-md-6">
                     <div class="form-group">
-                      <label class="control-label col-md-4">{{ _('Last Name')}}</label>
+                      <label class="control-label col-md-4">{{ _('Last Name*')}}</label>
                       <div class="col-md-8">
                         <input type="text"  ng-blur="getLinkedinProfile()" required id="id_lastname" class="form-control" ng-model="lead.lastname">
                       </div>
