add controls in new  opportunity
Former-commit-id: c9d8240814a68e0ec24234cf1914fff3ce871d3c [formerly 60d79438343deac9403e2f74bebbc9888bec500b] [formerly 67420732de0154d8060a7a553cbd992e341ea702 [formerly 30b9de8e3dc2c3fe62bd68d4cd3c6c9f25e34304]]
Former-commit-id: f00bb14109fe8d01a5664f87fae9a2c9f687e103 [formerly ef8ed8fb6772ce475ed969b794e7d0ddb7ab24c4]
Former-commit-id: e8924b7e328ac8e1574d1c7db52e10e2b4d916e4

--- a/templates/opportunities/opportunity_new.html
+++ b/templates/opportunities/opportunity_new.html
@@ -32,7 +32,7 @@
                   <h2 class="page-title">
             <a href="/#/opportunities" data-toggle="tooltip" data-placement="bottom" title="Back to Accounts">
             <img onload="this.__gwtLastUnhandledEvent=&quot;load&quot;;" src="https://admin.google.com/a/cpanel/gwt/cpanelnew/resources/clear.cache.gif" style="width: 21px; height: 21px; background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABUAAAAVCAYAAACpF6WWAAAAP0lEQVR42mNgGAXDApRT28AGIP5PCwP/08LA/9QKw/9kYLyggxaGYjMYHyApiBpoYSixSYqsyGwYzf+jgDQAAJylMNOnx10yAAAAAElFTkSuQmCC); background-position: 0px 0px; background-repeat: no-repeat no-repeat;" border="0" class="gwt-Image GI4HA0EPK cbarOpacity" aria-hidden="false"></a>     {{_("Opportunities")}} > <%= opportunity.name %>  </h2>
-            <button class="btn red newAccountBtnOnscroll pull-right hidden" ng-click="save(opportunity)">{{ _('Create')}}</button>
+            <button class="btn red newAccountBtnOnscroll pull-right hidden" ng-click="validateBefore(opportunity)">{{ _('Create')}}</button>
   </div>
   
   </div>
@@ -63,7 +63,7 @@
       <div class="row">
           <div class="showPage col-md-12 newActionsBtn">
           <span>{{_('Create Opportunity')}} </span>
-          <button class="btn red newAccountBtn pull-right" ng-click="save(opportunity)">{{_('Create')}}</button>
+          <button class="btn red newAccountBtn pull-right" ng-click="validateBeforeSave(opportunity)">{{_('Create')}}</button>
           <div class="clearfix"></div>
         </div>
        <div class="showPage slimForm col-md-12 margin-bottom-15">
