--- a/templates/base.html
+++ b/templates/base.html
@@ -391,7 +391,7 @@
  // var ROOT = '/_ah/api';
 
 
-//var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
+var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
 
 
 
