--- a/templates/contacts/contact_new.html
+++ b/templates/contacts/contact_new.html
@@ -30,7 +30,7 @@
                     <%= contact.lastname %>
                 </a>
             </h2>
-            <button class="btn red newAccountBtnOnscroll pull-right hidden" ng-click="save(contact)">Create</button>
+            <button class="btn red newAccountBtnOnscroll pull-right hidden" ng-click="validateBeforeSave(contact)">Create</button>
         </div>
 
         
@@ -59,7 +59,7 @@
             <div class="row">
                 <div class="showPage col-md-12 newActionsBtn">
                     <span>{{ _('Creating now Contact')}} </span>
-                    <button class="btn red newAccountBtn pull-right" ng-click="save(contact)">{{ _('Create')}}</button>
+                    <button class="btn red newAccountBtn pull-right" ng-click="validateBeforeSave(contact)">{{ _('Create')}}</button>
                     <div class="clearfix"></div>
                 </div>
                 <div class="showPage slimForm col-md-12 margin-bottom-15">
@@ -84,14 +84,14 @@
                                         <div class="row">
                                             <div class="col-md-6">
                                                 <div class="form-group">
-                                                    <div class="col-md-12">
+                                                    <div class="col-md-12" ng-class="{ 'has-error': contact_err.firstname}">
                                                         <input type="text" required id="id_firstname" class="form-control" ng-model="contact.firstname" placeholder="{{ _('First Name')}}">
                                                     </div>
                                                 </div>
                                             </div>
                                             <div class="col-md-6">
                                                 <div class="form-group">
-                                                    <div class="col-md-12">
+                                                    <div class="col-md-12" ng-class="{ 'has-error': contact_err.lastname}">
                                                         <input type="text"  required id="id_lastname" class="form-control" ng-model="contact.lastname" placeholder="{{ _('Last Name')}}">
                                                     </div>
                                                 </div>
