updating the license management process
Former-commit-id: 7cb93b7edbd2404d731e90262ccb2a154ffa8655 [formerly 1e341ec12360bf5b2b6bdfb918f81219c47e0574] [formerly 54ad1cdc6d253a3420c7af11d6c5b393d8ee17c4 [formerly f8e10cc26113bc0524731f37f2f4cb0e6659cfe9]]
Former-commit-id: 342ca60bc9fd6f157049b091f2af564019049508 [formerly 02952a00835b87c4a5673874a8393868d6ff6b90]
Former-commit-id: bdc8d5c388ffc01420cc48161fa9f1855e228262

--- a/templates/admin/users/user_list.html
+++ b/templates/admin/users/user_list.html
@@ -1,5 +1,3 @@
-
-
 <div class="row subHeader">
     <div class="currentApp">
        <div class="btn-group">
@@ -63,9 +61,10 @@
        </div>
        <div class="col-sm">
           <i class="fa  fa-check "></i>
-          {{ _('Licence type')}}: <%=organization.license.name%> <!-- licenses type>-->
+          {{ _('License type')}}: <%=organization.license.name%> <!-- licenses type>-->
        </div>     
       {% if is_not_a_life_time %}
+      {% if is_freemium ==False %}
        <div class="col-lg" >
         <i class="fa  fa-calendar "></i>
           {{ _('Expire')}}  : <%=organization.expires_on | date:'yyyy-MM-dd'%> <!--ex date>-->
@@ -77,6 +76,7 @@
            </span>
         </button> 
         {% endif %}
+       {% endif %}
         <div class="clearfix"></div>
      </div>
      <div class="showPage margin-bottom-15 col-md-12 task-actions" style="padding-top:10px; padding-bottom:10px;">
@@ -271,7 +271,7 @@
                                        12 months
                                   </span><br>
                                   <span class="licencePrice">
-                                        150 $ 
+                                        120 $ 
                                   </span>    <br>  
                                   <span>Per user</span><br>                      
                                   <input type="radio" ng-model="billing.plan" name="purchaseplan" value="year" required>
@@ -285,7 +285,7 @@
                                        1 month
                                   </span><br>
                                   <span class="licencePrice">
-                                        15 $ 
+                                        12 $ 
                                   </span>    <br>  
                                   <span>Per user</span><br>                      
                                   <input type="radio" ng-model="billing.plan" name="purchaseplan" value="month" ng-hide="billing.deactivate_month_option">
