fix the bug in user patch
Former-commit-id: c52c116a7f519d34d72e6b65e1fbdf7bf457ca4c [formerly 7def8d892c304330ec159d01e281d5864ea415dd] [formerly 45a08e9f4e5572e380644de403945bf342aae876 [formerly 097ebc097f1328bc8af4eca2f20113b7fd8efd6c]]
Former-commit-id: 1dd1a5735fcae7be2aa66fd94f8dd10befab8fe4 [formerly 35542cd1e5339dbda0142bcc1f2965342f657f11]
Former-commit-id: b5694f29d8d81a27f082d5058f28c0d3c41f21b6

--- a/templates/admin/settings/settings.html
+++ b/templates/admin/settings/settings.html
@@ -79,7 +79,7 @@
                     <a ng-click="waterfall(); selectedTab =6;">{{ _('Language')}}</a>
                   </li>
                   <li class="ng-tab sm-menu" ng-class="{active: selectedTab ==7}">
-                    <a ng-click="waterfall(); selectedTab =7; getUser({{user.key.id()}})">{{ _('Gmail Synchronization')}}</a>
+                    <a ng-click="waterfall(); selectedTab =7;">{{ _('Gmail Synchronization')}}</a>
                   </li>
 
 
