--- a/templates/accounts/account_list.html
+++ b/templates/accounts/account_list.html
@@ -924,17 +924,13 @@
               <h3 id="myModalLabel">{{_("Import contacts")}}</h3>
             </div>
             <div class="modal-body">
-                <p>{{_("We support importing CSV files from Google Contacts, Outlook, Outlook Express and some other apps. Please select a CSV file to upload:")}}</p>
+                <p>{{_("We support importing CSV files from  and some other apps. Please select a CSV file to upload:")}}</p>
                 <div class="radio-list">
                     
                     <label>
-                        <input type="radio" name="optionsRadios" id="optionsRadios23"  ng-model="file_type" value="google"  checked="" > Google CSV format
+                        <input type="radio" name="optionsRadios" id="optionsRadios23"  ng-model="file_type" value="google"  checked="" >  CSV file 
                     </label>
-                    <label>
-                        
-
-                        <input type="radio" name="optionsRadios" id="optionsRadios22" ng-model="file_type" value="outlook" checked=""> Outlook CSV format
-                    </label>
+                   
                   </div>
             </div>
             <div class="modal-footer">
