import Account unless contact on import showmodal on Accounrt List
Former-commit-id: 4281f1fe39a2c8aaa00474948998e28cfc07c8b2 [formerly 727ff927e823ebe0d2f285d7707614136a7f0412] [formerly 3e8eeebdc6a9f191b6d2000a43226a3b4c7c7134 [formerly bf919badd40600e098d53c7a2c57c6eabab84d48]]
Former-commit-id: 8cea08e82bec9e58361cf07602debf2bd38feac7 [formerly 30a54de0ef3b92d53c5b6b9b46475f73760d6336]
Former-commit-id: 0edd53453506a49e91b8c1d65f56eb3ab86b7057

--- a/templates/accounts/account_list.html
+++ b/templates/accounts/account_list.html
@@ -921,7 +921,7 @@
           <div class="modal-content">
             <div class="modal-header">
               <button type="button" class="close" data-dismiss="modal" aria-hidden="true"></button>
-              <h3 id="myModalLabel">{{_("Import contacts")}}</h3>
+              <h3 id="myModalLabel">{{_("Import Accounts")}}</h3>
             </div>
             <div class="modal-body">
                 <p>{{_("We support importing CSV files from  and some other apps. Please select a CSV file to upload:")}}</p>
